Removed resource link since it is no longer required